* The CODA IDL DLM files have been renamed from coda-idl.* to coda_idl.*
  (to better support CMake builds on Windows). Remove any old coda-idl.*
  files from the installation directory to prevent errors.

* The CODA C library now uses thread-local storage (TLS) variables
  internally to allow CODA to be used in multi-threaded applications.
  You will still have to call coda_init() separately for each thread and
  can't reuse products/cursors/etc. from one thread in another.

* Added -p/--path option to codacmp.

* Fixed issue in generated documentation of detection expressions.

* Fixed memory issue when trying to access (non-existing) attributes of an
  HDF5 dataset element.

* Fixed build system to work with automake 1.16.

* Fixed round() coda expression function for negative values
  (round(-0.6) was returning -2 instead of -1).

* Updated build system to link against HDF4 installations that use libhdf
  instead of libdf as library name.

2.19 2018-03-28
~~~~~~~~~~~~~~~

* Added support for netCDF CDF-5 (NC_64BIT_DATA).

* Fixed issue where filename() expression would provide full filename path
  on Windows (instead of just the filename). This impacted product type
  detection on Windows when the detection expression was using the filename.

* Fixed issue reading variable length strings from a scalar dataset in HDF5.

* Added support for empty string attributes in HDF5 (i.e. using H5S_NULL).

* Allow min() and max() coda expression functions to work on arrays and on
  (arrays of) string values.

2.18.3 2017-09-22
~~~~~~~~~~~~~~~~~

* The CODA Python interface now automatically sets a default CODA_DEFINITION
  path relative to the CODA Python package.

* Fixed memory leak in HDF5 backend.

* Allow fixed length array dimension definitions for XML formatted products.

2.18.2 2017-06-20
~~~~~~~~~~~~~~~~~

* Added automatic scale_factor/add_offset/missing_value/_FillValue conversion
  for HDF5 (similar to what was already done for netcdf and HDF4).
